fixed alignment

--- a/reactapp/src/index.scss
+++ b/reactapp/src/index.scss
@@ -358,8 +358,8 @@ code {
    display:flex;
    justify-content:center; /* horizontally center */
    align-items:center;    /* vertically center */
-   height:300px;
-   width:300px;
+   height:200px;
+   width:400px;
  }
 
 .center-image img{
